--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ main{
     grid-template-columns: 33% 1fr;
 }
 
-.Personal, .Skills, .Languages{
+.Skills, .Languages{
     padding: 1rem;
     line-height: 2;
 }   
@@ -36,7 +36,8 @@ main{
     position:relative;
 }
 h1{
-    padding: 3rem;
+    margin: 2rem;
+    
 }
 h2, h3, h4, h7{
     font-size: 25px;
